# webfuse-provider

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  README.md  changelog.md  codecov.yml  meson.build  meson_options.txt
examples/: .travis.yml
examples/provider/: main.c
examples/src/static_filesystem/: main.c
examples/static_filesystem/: main.c  static_filesystem.c  static_filesystem.h
examples/subprojects/: webfuse.wrap
include/webfuse_provider/: api.h  client.h  client_config.h  client_protocol.h  credentials.h  dirbuffer.h  protocol_names.h  status.h  webfuse_provider.h
include/webfuse_provider/operation/: close.h  error.h  getattr.h  lookup.h  open.h  read.h  readdir.h
lib/webfuse_provider/: api.c
lib/webfuse_provider/impl/: base64.c  base64.h  client.c  client.h  client_config.c  client_config.h  client_protocol.c  client_protocol.h  container_of.h  credentials.c  credentials.h  dirbuffer.c  dirbuffer.h  json_util.c  json_util.h  lws_log.c  lws_log.h  message.c  message.h  message_queue.c  message_queue.h  message_writer.c  message_writer.h  provider.c  provider.h  request.c  request.h  slist.c  slist.h  status.c  status_intern.h  url.c  url.h  util.h
lib/webfuse_provider/impl/json/: doc.c  doc.h  node.c  node.h  node_intern.h  parser.c  parser.h  reader.c  reader.h  writer.c  writer.h
lib/webfuse_provider/impl/jsonrpc/: error.c  error.h  method.c  method.h  method_invoke_fn.h  proxy.c  proxy.h  proxy_finished_fn.h  proxy_intern.h  proxy_variadic.c  request.c  request.h  response.c  response.h  response_intern.h  send_fn.h  server.c  server.h
lib/webfuse_provider/impl/operation/: close.c  close.h  error.h  getattr.c  getattr.h  lookup.c  lookup.h  open.c  open.h  read.c  read.h  readdir.c  readdir.h
lib/webfuse_provider/impl/timer/: manager.c  manager.h  manager_intern.h  on_timer_fn.h  timepoint.c  timepoint.h  timer.c  timer.h  timer_intern.h
lib/webfuse_provider/impl/util/: base64.c  base64.h  container_of.h  json_util.c  json_util.h  lws_log.c  slist.c  slist.h  url.c  url.h
src/: main.c
src/static_filesystem/: main.c  path.c  path.h  static_filesystem.c
test/webfuse_provider/: json_matcher.hpp
test/webfuse_provider/core/: test_message.cc  test_url.cc  test_util.cc
test/webfuse_provider/json/: test_json_parser.cc  test_json_writer.cc
test/webfuse_provider/jsonrpc/: mock_timer.cc  mock_timer.hpp  mock_timer_callback.cc  mock_timer_callback.hpp  test_is_request.cc  test_is_response.cc  test_proxy.cc  test_request.cc  test_response.cc  test_response_parser.cc
test/webfuse_provider/mocks/: fake_invokation_context.cc  fake_invokation_context.hpp  lookup_matcher.hpp  mock_invokation_handler.hpp  mock_jsonrpc_proxy.cc  mock_jsonrpc_proxy.hpp  mock_operation_context.cc  mock_operation_context.hpp  mock_provider.cc  mock_provider.hpp  mock_provider_client.cc  mock_provider_client.hpp  mock_request.cc  mock_request.hpp
test/webfuse_provider/provider/: test_client.cc  test_client_protocol.cc  test_dirbuffer.cc
test/webfuse_provider/provider/operation/: test_close.cc  test_getattr.cc  test_lookup.cc  test_open.cc  test_read.cc  test_readdir.cc
test/webfuse_provider/test_util/: client.cc  client.hpp  json_doc.cc  json_doc.hpp  timeout_watcher.cc  timeout_watcher.hpp  webfuse_server.cc  webfuse_server.hpp  wrap.hpp  ws_server.cc  ws_server.h
test/webfuse_provider/tests/core/: test_base64.cc  test_container_of.cc  test_message.cc  test_message_queue.cc  test_slist.cc  test_status.cc  test_url.cc  test_util.cc
test/webfuse_provider/tests/core/jsonrpc/: mock_timer.cc  mock_timer.hpp  mock_timer_callback.cc  mock_timer_callback.hpp  test_is_request.cc  test_is_response.cc  test_proxy.cc  test_request.cc  test_response.cc  test_response_parser.cc  test_server.cc
test/webfuse_provider/tests/core/timer/: test_timepoint.cc  test_timer.cc
test/webfuse_provider/tests/integration/: file.cc  file.hpp  provider.cc  provider.hpp  server.cc  server.hpp  test_integration.cc  test_lowlevel.cc
test/webfuse_provider/tests/provider/: test_client_protocol.cc  test_dirbuffer.cc
test/webfuse_provider/timer/: test_timer.cc
test/webfuse_provider/util/: test_base64.cc  test_container_of.cc  test_message.cc  test_message_queue.cc  test_slist.cc  test_status.cc  test_url.cc  test_util.cc
test/webfuse_provider/utils/: adapter_client.cc  adapter_client.hpp  file_utils.cc  file_utils.hpp  path.c  path.h  static_filesystem.c  static_filesystem.h  tempdir.cc  tempdir.hpp  timeout_watcher.cc  ws_server.cc  ws_server2.cc  ws_server2.hpp
